--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -7,16 +7,18 @@ const pageTitle = "Índice de TAGS"
 ---
 
 <style>
-    a {color: burlywood; text-decoration: none;}
-    a:hover {color: darkolivegreen}
-    .tags {display: flex; flex-wrap: wrap;}
+    a {color: darkolivegreen; text-decoration: none;}
+    a:hover {color: white}
+    .tags {
+        display: flex; 
+        flex-wrap: wrap;
+    }
     .tag {
         margin: 0.25em;
-        border: dotted 1px #a1a1a1;
         border-radius: .5em;
         padding: .5em 1em;
-        font-size: 1.15em;
-        background-color: #f8fcfd;
+        font-size: 0.75em;
+        background-color:burlywood;
     }
 
 </style>
